--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentNoViewBoxExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentNoViewBoxExample.razor
@@ -2,6 +2,12 @@
 
 @code
 {
+    [Parameter]
+    public SvgValue ViewBoxHeight { get; set; }
+
+    [Parameter]
+    public SvgValue ViewBoxWidth { get; set; }
+
     private SvgComponent svgref;
 
     protected override void OnAfterRender(bool firstRender)
