--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentViewBoxExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentViewBoxExample.razor
@@ -1,7 +1,13 @@
-﻿<SvgComponent @ref="svgref" Width="100" Height="100" />
+﻿<SvgComponent @ref="svgref" Width="100" Height="100" ViewBoxHeight="200" ViewBoxWidth="200" />
 
 @code
 {
+    [Parameter]
+    public SvgValue ViewBoxHeight { get; set; }
+
+    [Parameter]
+    public SvgValue ViewBoxWidth { get; set; }
+
     private SvgComponent svgref;
 
     protected override void OnAfterRender(bool firstRender)
