--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentPlaygroundExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgComponentPlaygroundExample.razor
@@ -4,7 +4,7 @@
 @code {
     SvgComponent svgref;
 
-    private void OnAddElement()
+    private async Task OnAddElement()
     {
         SvgElement c;
 
@@ -59,6 +59,12 @@
         };
 
         svgref.Add(c);
+
+        svgref.Refresh();
+
+
+        var bb = await svgref.GetBoundingBox(c);
+        Console.WriteLine("bb=" + bb);
     }
 
     private void OnSvgClicked(MouseEventArgs args)
