Add circle example description

--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -2,4 +2,13 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Circle</ExampleTitle>
+<p>Circles are defined by SvgCircle class.</p>
+<h2>Basic circle example:</h2>
 <ExampleComponent ExampleCode="@(new CircleExample())" />
+<p>Used parameters:</p>
+<ul>
+    <li>CenterX - the coordinate x of the center of the SvgCircle</li>
+    <li>CenterY - the coordinate y of the center of the SvgCircle</li>
+    <li>Radius - the radius of the SvgCircle</li>
+    <li>Fill - the fill color of the SvgCircle</li>
+</ul>
