--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -4,7 +4,7 @@
 <ExampleTitle>Circle</ExampleTitle>
 <p>Circles are defined by SvgCircle class.</p>
 <h2>Basic circle example:</h2>
-<ExampleComponent ExampleCode="@(new CircleExample())" />
+<ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <p>Used parameters:</p>
 <ul>
     <li>CenterX - the coordinate x of the center of the SvgCircle</li>
