--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -2,13 +2,12 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Circle</ExampleTitle>
-<p>Circles are defined by SvgCircle class.</p>
-<h2>Basic circle example:</h2>
+<p>SvgCircle class is responsible for providing @("<circle>") elements</p>
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <p>Used parameters:</p>
 <ul>
-    <li>CenterX - the coordinate x of the center of the SvgCircle</li>
-    <li>CenterY - the coordinate y of the center of the SvgCircle</li>
-    <li>Radius - the radius of the SvgCircle</li>
-    <li>Fill - the fill color of the SvgCircle</li>
+    <li>CenterX - the coordinate x of the center of the circle</li>
+    <li>CenterY - the coordinate y of the center of the circle</li>
+    <li>Radius - the radius of the circle</li>
+    <li>Fill - the fill color of the circle</li>
 </ul>
