--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,8 +1,8 @@
 ﻿@page "/elements/circle"
 @using SvgBlazor.Docs.Components
 
-<ExampleTitle>Circle</ExampleTitle>
-<p>SvgCircle class is responsible for providing @("<circle>") elements</p>
+<ExampleTitle>SvgCircle</ExampleTitle>
+<p>The SvgCircle class is responsible for providing the svg @("<circle>") element.</p>
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <p>Used parameters:</p>
 <ul>
