Add circle example description (#107)
Co-authored-by: Aro Wierzbowski <arowierzbowski@gmail.com>

--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,5 +1,13 @@
 ﻿@page "/elements/circle"
 @using SvgBlazor.Docs.Components
 
-<ExampleTitle>Circle</ExampleTitle>
-<ExampleComponent ExampleCode="@(new CircleExample())" />
+<ExampleTitle>SvgCircle</ExampleTitle>
+<p>The SvgCircle class is responsible for providing the svg @("<circle>") element.</p>
+<ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
+<p>Used parameters:</p>
+<ul>
+    <li>CenterX - the coordinate x of the center of the circle</li>
+    <li>CenterY - the coordinate y of the center of the circle</li>
+    <li>Radius - the radius of the circle</li>
+    <li>Fill - the fill color of the circle</li>
+</ul>
