--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Ellipse</ExampleTitle>
+<p>The SvgEllipse class is responsible for providing the svg @("<ellipse>") element.</p>
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
 <ElementApiDocs ElementType="@typeof(SvgEllipse)" />
