Add description: Line

--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Line</ExampleTitle>
+<p>The SvgLine class is responsible for providing the svg @("<line>") element.</p>
 <ExampleComponent ExampleCode="@(new LineExample())" />
 <ElementApiDocs ElementType="@typeof(SvgLine)" />
