Add description: Polygon

--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Polygon</ExampleTitle>
+<p>The SvgPolygon class is responsible for providing the svg @("<polygon>") element.</p>
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPolygon)" />
