Add description: Rect

--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Rect</ExampleTitle>
+<p>The SvgRect class is responsible for providing the svg @("<rect>") element.</p>
 <ExampleComponent ExampleCode="@(new RectExample())" />
 <ElementApiDocs ElementType="@typeof(SvgRect)" />
