--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>G</ExampleTitle>
+<p>The SvgG class is responsible for providing the svg @("<g>") element.</p>
 <ExampleComponent ExampleCode="@(new GExample())" />
 <ElementApiDocs ElementType="@typeof(SvgG)" />
