--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -7,7 +7,7 @@
 <h5>Basic</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
-<h5>Shift X,Y</h5>
+<h5>Shift X, Y</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample())" />
 
 <h5>Rotate</h5>
@@ -16,7 +16,7 @@
 <h5>TextLength with spacing adjust</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingExample())" />
 
-<h5>TextLength spacing and glyphs adjust</h5>
+<h5>TextLength with spacing and glyphs adjust</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingAndGlyphsExample())" />
 
 <ElementApiDocs ElementType="@typeof(SvgText)" />
