--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -3,20 +3,19 @@
 
 <ExampleTitle>Text</ExampleTitle>
 <p>The SvgText class is responsible for providing the svg @("<text>") element.</p>
-<h4>Text examples:</h4>
-<h5>Basic</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
-<h5>Shift X, Y</h5>
+<p>To shift the position of the text assign values to ShiftX and ShiftY properties:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample())" />
 
-<h5>Rotate</h5>
+<p>Text rotation can be achieved by assigning properly formatted string to Rotate property:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextRotateExample())" />
 
-<h5>TextLength with spacing adjust</h5>
+<p>The following examples show how to control the text stretch based on its length</p>
+<p>Stretch spacing only:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingExample())" />
 
-<h5>TextLength with spacing and glyphs adjust</h5>
+<p>Stretch spacing and glyphs:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingAndGlyphsExample())" />
 
 <ElementApiDocs ElementType="@typeof(SvgText)" />
