--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -5,17 +5,20 @@
 <p>The SvgText class is responsible for providing the svg @("<text>") element.</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
+<h5>Shift</h5>
 <p>To shift the position of the text assign values to ShiftX and ShiftY properties:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample())" />
 
+<h5>Rotate</h5>
 <p>Text rotation can be achieved by assigning properly formatted string to Rotate property:</p>
 <ExampleComponent Height="50" ExampleCode="@(new TextRotateExample())" />
 
-<p>The following examples show how to control the text stretch based on its length</p>
-<p>Stretch spacing only:</p>
+<h5>LengthAdjust</h5>
+<p>The following examples show how to control the text stretch based on its length:</p>
+<h6>Spacing</h6>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingExample())" />
 
-<p>Stretch spacing and glyphs:</p>
+<h6>SpacingAndGlyphs</h6>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustSpacingAndGlyphsExample())" />
 
 <ElementApiDocs ElementType="@typeof(SvgText)" />
