--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -2,5 +2,6 @@
 @using SvgBlazor.Docs.Components
 
 <ExampleTitle>Path</ExampleTitle>
+<p>The SvgPath class is responsible for providing the svg @("<path>") element.</p>
 <ExampleComponent ExampleCode="@(new PathExample())" />
 <ElementApiDocs ElementType="@typeof(SvgBlazor.Elements.SvgPath)" />
