LineCap examples update

--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -16,12 +16,7 @@
 
 <h5>LineCap</h5>
 <p>The following examples show how to define different stroke endings for open shapes:</p>
-<h6>Butt</h6>
-<div><ExampleComponent Height="40" ExampleCode="@(new StrokeLineCapButtExample())" /></div>
-<h6>Square</h6>
-<div><ExampleComponent Height="40" ExampleCode="@(new StrokeLineCapSquareExample())" /></div>
-<h6>Round</h6>
-<div><ExampleComponent Height="40" ExampleCode="@(new StrokeLineCapRoundExample())" /></div>
+<div><ExampleComponent ExampleCode="@(new StrokeLineCapExamples())" /></div>
 
 <h5>LineJoin</h5>
 <p>The following examples show how to define different stroke shapes for corners:</p>
