--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -20,20 +20,7 @@
 
 <h5>LineJoin</h5>
 <p>The following examples show how to define different stroke shapes for corners:</p>
-<h6>Miter</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeLineJoinMiterExample())" /></div>
-
-<h6>Round</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeLineJoinRoundExample())" /></div>
-
-<h6>Bevel</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeLineJoinBevelExample())" /></div>
-
-<h6>Miter clip</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeLineJoinMiterClipExample())" /></div>
-
-<h6>Arcs</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeLineJoinArcsExample())" /></div>
+<div><ExampleComponent Height=520 ExampleCode="@(new StrokeLineJoinExamples())" /></div
 
 <h5>Opacity</h5>
 <p>To change the opacity of the stroke, assign value to Opacity property:</p>
