--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -20,7 +20,7 @@
 
 <h5>LineJoin</h5>
 <p>The following examples show how to define different stroke shapes for corners:</p>
-<div><ExampleComponent Height=520 ExampleCode="@(new StrokeLineJoinExamples())" /></div
+<div><ExampleComponent Height=520 ExampleCode="@(new StrokeLineJoinExamples())" /></div>
 
 <h5>Opacity</h5>
 <p>To change the opacity of the stroke, assign value to Opacity property:</p>
@@ -29,12 +29,6 @@
 <h5>MiterLimits</h5>
 <p>The following examples show how to set miter length limit:</p>
 <h6>No limit</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample())" /></div>
-
-<h6>MiterLimit 1</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeMiterLimit1Example())" /></div>
-
-<h6>MiterLimit 2</h6>
-<div><ExampleComponent ExampleCode="@(new StrokeMiterLimit2Example())" /></div>
+<div><ExampleComponent Height=250 ExampleCode="@(new StrokeMiterLimitExamples())" /></div>
 
 <ElementApiDocs ElementType="@typeof(SvgStroke)" />
