--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -14,6 +14,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/getting-started" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Getting started
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/svg" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> SVG
             </NavLink>
