--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -68,6 +68,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/attributes/fill" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Fill
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/path" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Path
             </NavLink>
