--- a/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
+++ b/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
@@ -8,3 +8,5 @@
 <h3>2. Imports</h3>
 <p>Once the installation is complete, add SvgBlazor in _Imports.razor:</p>
 <b>@("@using") SvgBlazor</b>
+<h3>3. Basic example </h3>
+<ExampleCode ItemName="GettingStartedExample"></ExampleCode>
