--- a/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
+++ b/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
@@ -8,5 +8,6 @@
 <h3>2. Imports</h3>
 <p>Once the installation is complete, add SvgBlazor in _Imports.razor:</p>
 <b>@("@using") SvgBlazor</b>
-<h3>3. Basic example </h3>
+<h3>3. Basic example</h3>
+<p>Add SvgComponent tag in your .razor file and capture it's refrenece by using @("@ref"):</p>
 <ExampleCode ItemName="GettingStartedExample"></ExampleCode>
