--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -78,6 +78,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Path
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/svgvalue" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> SvgValue
+            </NavLink>
+        </li>
     </ul>
 </div>
 
