--- a/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
+++ b/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
@@ -9,5 +9,6 @@
 <p>Once the installation is complete, add SvgBlazor in _Imports.razor:</p>
 <b>@("@using") SvgBlazor</b>
 <h3>3. Basic example</h3>
-<p>Add SvgComponent tag in your .razor file and capture it's refrenece by using @("@ref"):</p>
+<p>Add a SvgComponent tag in your .razor file and capture it's reference by using @("@ref") property:</p>
 <ExampleCode ItemName="GettingStartedExample"></ExampleCode>
+<h3>4. Enjoy the library!</h3>
