--- a/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
+++ b/src/SvgBlazor.Docs/Pages/GettingStarted/GettingStartedPage.razor
@@ -3,12 +3,12 @@
 
 <ExampleTitle>Getting Started</ExampleTitle>
 <h3>1. Package installation</h3>
-<p>To install SvgBlazor use NuGet Package Manager or the following command:</p>
+<p>To install SvgBlazor use NuGet Package Manager or install it with the following command:</p>
 <b>dotnet add package SvgBlazor</b>
 <h3>2. Imports</h3>
 <p>Once the installation is complete, add SvgBlazor in _Imports.razor:</p>
 <b>@("@using") SvgBlazor</b>
-<h3>3. Basic example</h3>
+<h3>3. Create a SVG component</h3>
 <p>Add a SvgComponent tag in your .razor file and capture it's reference by using @("@ref") property:</p>
 <ExampleCode ItemName="GettingStartedExample"></ExampleCode>
 <h3>4. Enjoy the library!</h3>
