--- a/src/SvgBlazor.Docs/Pages/GettingStarted/Examples/GettingStartedExample.razor
+++ b/src/SvgBlazor.Docs/Pages/GettingStarted/Examples/GettingStartedExample.razor
@@ -1,5 +1,5 @@
 ﻿@*#example-code-start*@
-<SvgComponent @ref="svgComponent"></SvgComponent>
+<SvgComponent @ref="svgComponent" />
 
 @code {
     private SvgComponent svgComponent;
