--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -1,7 +1,8 @@
 ﻿@page "/elements/ellipse"
 @using SvgBlazor.Docs.Components
+@using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Ellipse</ExampleTitle>
-<p>The SvgEllipse class is responsible for providing the svg @("<ellipse>") element.</p>
+<p>@( typeof(SvgEllipse).GetDocumentation() )</p>
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
 <ElementApiDocs ElementType="@typeof(SvgEllipse)" />
