--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -1,7 +1,8 @@
 ﻿@page "/elements/g"
 @using SvgBlazor.Docs.Components
+@using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>G</ExampleTitle>
-<p>The SvgG class is responsible for providing the svg @("<g>") element.</p>
+<p>@( typeof(SvgG).GetDocumentation() )</p>
 <ExampleComponent ExampleCode="@(new GExample())" />
 <ElementApiDocs ElementType="@typeof(SvgG)" />
