--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -1,7 +1,8 @@
 ﻿@page "/elements/path"
 @using SvgBlazor.Docs.Components
+@using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Path</ExampleTitle>
-<p>The SvgPath class is responsible for providing the svg @("<path>") element.</p>
+<p>@( typeof(SvgPath).GetDocumentation() )</p>
 <ExampleComponent ExampleCode="@(new PathExample())" />
-<ElementApiDocs ElementType="@typeof(SvgBlazor.Elements.SvgPath)" />
+<ElementApiDocs ElementType="@typeof(SvgPath)" />
