--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -1,7 +1,8 @@
 ﻿@page "/elements/polygon"
 @using SvgBlazor.Docs.Components
+@using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Polygon</ExampleTitle>
-<p>The SvgPolygon class is responsible for providing the svg @("<polygon>") element.</p>
+<p>@( typeof(SvgPolygon).GetDocumentation() )</p>
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPolygon)" />
