--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -3,7 +3,7 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Stroke</ExampleTitle>
-<p>@( typeof(SvgStroke).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgStroke)" />
 
 <div><ExampleComponent ExampleCode="@(new StrokeBasicExample())" /></div>
 
