--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Circle</ExampleTitle>
-<p>@( typeof(SvgCircle).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgCircle)" />
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <ElementApiDocs ElementType="@typeof(SvgCircle)" />
