--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Ellipse</ExampleTitle>
-<p>@( typeof(SvgEllipse).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgEllipse)" />
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
 <ElementApiDocs ElementType="@typeof(SvgEllipse)" />
