--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>G</ExampleTitle>
-<p>@( typeof(SvgG).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgG)" />
 <ExampleComponent ExampleCode="@(new GExample())" />
 <ElementApiDocs ElementType="@typeof(SvgG)" />
