--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Line</ExampleTitle>
-<p>@( typeof(SvgLine).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgLine)" />
 <ExampleComponent ExampleCode="@(new LineExample())" />
 <ElementApiDocs ElementType="@typeof(SvgLine)" />
