--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Path</ExampleTitle>
-<p>@( typeof(SvgPath).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgPath)" />
 <ExampleComponent ExampleCode="@(new PathExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPath)" />
