--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Polygon</ExampleTitle>
-<p>@( typeof(SvgPolygon).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgPolygon)" />
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
 <ElementApiDocs ElementType="@typeof(SvgPolygon)" />
