--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -3,6 +3,6 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Rect</ExampleTitle>
-<p>@( typeof(SvgRect).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgRect)" />
 <ExampleComponent ExampleCode="@(new RectExample())" />
 <ElementApiDocs ElementType="@typeof(SvgRect)" />
