--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -3,7 +3,7 @@
 @using SvgBlazor.Docs.Extensions
 
 <ExampleTitle>Text</ExampleTitle>
-<p>@( typeof(SvgText).GetDocumentation() )</p>
+<ElementDescription ElementType="@typeof(SvgText)" />
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
 <h5>Shift</h5>
